--- a/src/cms.html
+++ b/src/cms.html
@@ -7,6 +7,7 @@
   <title>Content Manager</title>
 
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="/js/jquery.min.js"></script>
 </head>
 <body>
   <script src="<%= htmlWebpackPlugin.files.chunks.cms.entry %>"></script>
